# provenance-mark-cli-rust

./: CLA.md  Cargo.toml  README.md
CLA-signed/: CLA.wolfmcnally.943652EE38441760C3DC35364B6C2FCF894780AE.md.asc
example/: generator.json
example/marks/: mark-0.json
src/: data_types.rs  envelope_args.rs  main.rs  utils.rs
src/cmd/: info.rs  mod.rs  new.rs  next.rs  print.rs  seed.rs  validate.rs
tests/: validate.rs
