[package]
name = "provenance-mark-cli"
version = "0.2.1"
edition = "2024"
description = "A command line tool for creating and managing Provenance Marks."
authors = ["Blockchain Commons"]
repository = "https://github.com/BlockchainCommons/provenance-mark-cli-rust"
readme = "README.md"
license = "BSD-2-Clause-Patent"
documentation = "https://docs.rs/provenance-mark-cli"
keywords = [
    "cryptography",
    "provenance",
    "copyright",
    "blockchain",
] # Up to five
categories = [
    "cryptography",
    "authentication",
    "command-line-utilities",
] # https://crates.io/category_slugs

[[bin]]
name = "provenance"
path = "src/main.rs"

[dependencies]
provenance-mark = "^0.11.0"
dcbor = "^0.21.0"
bc-ur = "^0.11.0"
bc-tags = "^0.4.0"

clap = { version = "^4.4.3", features = ["derive", "unstable-styles"] }
anyhow = "^1.0.0"
anstyle = "^1.0.1"
glob = "0.3.2"
serde_json = "1.0.135"
