[package]
name = "provenance-mark-cli"
version = "0.6.0"
edition = "2024"
description = "A command line tool for creating and managing Provenance Marks."
authors = ["Blockchain Commons"]
repository = "https://github.com/BlockchainCommons/provenance-mark-cli-rust"
readme = "README.md"
license = "BSD-2-Clause-Patent"
documentation = "https://docs.rs/provenance-mark-cli"
keywords = [
    "cryptography",
    "provenance",
    "copyright",
    "blockchain",
] # Up to five
categories = [
    "cryptography",
    "authentication",
    "command-line-utilities",
] # https://crates.io/category_slugs

[[bin]]
name = "provenance"
path = "src/main.rs"

[dependencies]
provenance-mark = "^0.20.0"
dcbor = "^0.25.0"
bc-ur = "^0.19.0"
bc-tags = "^0.12.0"
bc-components = "^0.31.0"
bc-envelope = { version = "^0.41.0", path = "../bc-envelope", features = [
    "known_value",
] }
known-values = { version = "^0.15.0", path = "../known-values" }
hex = "^0.4.3"
base64 = "^0.22.0"

clap = { version = "^4.4.3", features = ["derive", "unstable-styles"] }
anyhow = "^1.0.0"
anstyle = "^1.0.1"
glob = "0.3.2"
serde_json = "1.0.135"

[dev-dependencies]
chrono = "^0.4"
indoc = "^2.0.0"
assert_cmd = "^2.0.12"
tempfile = "^3.8"
